<resources>
    <string name="app_name">Easy Bill</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="query_hint">Search Here</string>
    <string name="id">Id Here</string>
    <string name="name">Name Here</string>
    <string name="date">Date Here</string>
    <string name="type">Type Here</string>
    <string name="price">Price Here</string>
    <string name="search">Search</string>
    <string name="gestion_context">10 dernières notes de frais ajoutées</string>
    <string name="login">LOGIN</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_username">Username</string>
    <string name="logo">Logo</string>
    <string name="sort">Tri</string>
    <string name="Name">Nom</string>
    <string name="Date">Date</string>
    <string name="Price">Prix</string>
    <string name="Type">Type</string>
    <string name="Register">Register</string>
</resources>